--- a/en/boardgames.html
+++ b/en/boardgames.html
@@ -236,6 +236,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/boardgames_images/small/gallery-1.jpg" width="450" height="600" loading="lazy"
+                    alt="Chess in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
+                    title="Chess"
                     class="img-cover">
                 </figure>
 
@@ -249,6 +251,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/boardgames_images/small/gallery-2.jpg" width="450" height="600" loading="lazy"
+                    alt="Checkers in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
+                    title="Checkers"
                     class="img-cover">
                 </figure>
 
@@ -262,6 +266,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/boardgames_images/small/gallery-3.jpg" width="450" height="600" loading="lazy"
+                    alt="Students playing Survivors of Hellapagos in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
+                    title="Survivors of Hellapagos"
                     class="img-cover">
                 </figure>
               </div>
@@ -275,6 +281,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/boardgames_images/small/gallery-4.jpg" width="450" height="600" loading="lazy"
+                    alt="Students playing Uno and Othello in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
+                    title="Othello & Uno"
                     class="img-cover">
                 </figure>
 
@@ -287,6 +295,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/boardgames_images/small/gallery-5.jpg" width="450" height="600" loading="lazy"
+                    alt="Kaptam Gamers ry's different board games, including Sushi Go!, Jenga, The Mind, Uno, Marvel Mayhem, For Sale"
+                    title="Various board games"
                     class="img-cover">
                 </figure>
 
@@ -299,6 +309,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/boardgames_images/small/gallery-6.jpg" width="450" height="600" loading="lazy"
+                    alt="Students playing twenty-five in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
+                    title="Twenty-five"
                     class="img-cover">
                 </figure>
               </div>
@@ -337,8 +349,8 @@
 
         <div class="footer-brand">
 
-          <p class="logo">Kaptam Gamers</p>
-
+          <p class="logo2">Kaptam Gamers</p>
+          <p class="footer-list-title" id="some"></p>
           <p class="footer-text">
             Association for Video Gamers, Board Gamers and Role-Players
           </p>
