--- a/en/gallery.html
+++ b/en/gallery.html
@@ -150,6 +150,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-01.jpg" width="450" height="600" loading="lazy"
+                  alt="Street Fighter 3rd Strike Lahti Fisticuffs Tournament in the LAB University of Applied Sciences. Organized by Lahti FGC"
+                  title="SF3 Tournament"
                     class="img-cover">
                 </figure>
 
@@ -162,6 +164,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-02.jpg" width="450" height="600" loading="lazy"
+                  alt="YaBoiSpades streaming Street Fighter 3rd Strike Lahti Fisticuffs Tournament to Twitch in the LAB University of Applied Sciences. Organized by Lahti FGC"
+                  title="YaBoiSpades streaming to Twitch"
                     class="img-cover">
                 </figure>
 
@@ -174,6 +178,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-03.jpg" width="450" height="600" loading="lazy"
+                  alt="Students having fun in Street Fighter 3rd Strike Lahti Fisticuffs Tournament in the LAB University of Applied Sciences. Organized by Lahti FGC"
+                  title="Fun times"
                     class="img-cover">
                 </figure>
               </div>
@@ -187,6 +193,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-04.jpg" width="450" height="600" loading="lazy"
+                  alt="After gaming in Street Fighter 3rd Strike Lahti Fisticuffs Tournament in the LAB University of Applied Sciences. Organized by Lahti FGC"
+                  title="Aftergaming at SF3 Tournament"
                     class="img-cover">
                 </figure>
 
@@ -199,6 +207,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-05.jpg" width="450" height="600" loading="lazy"
+                  alt="Twitch stream footage of Street Fighter 3rd Strike Lahti Fisticuffs Tournament in the LAB University of Applied Sciences. Organized by Lahti FGC"
+                  title="Tournament in Twitch"
                     class="img-cover">
                 </figure>
 
@@ -211,6 +221,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-06.jpg" width="450" height="600" loading="lazy"
+                  alt="Last match of Street Fighter 3rd Strike Lahti Fisticuffs Tournament in the LAB University of Applied Sciences. Organized by Lahti FGC"
+                  title="Last match"
                     class="img-cover">
                 </figure>
               </div>
@@ -233,6 +245,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-07.jpg" width="450" height="600" loading="lazy"
+                  alt="Super Street Fighter 2 Turbo Lahti Fisticuffs Tournament in the LAB University of Applied Sciences. Organized by Lahti FGC"
+                  title="SF2ST Tournament"
                     class="img-cover">
                 </figure>
 
@@ -245,6 +259,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-08.jpg" width="450" height="600" loading="lazy"
+                  alt="After gaming at Super Street Fighter 2 Turbo Lahti Fisticuffs Tournament in the LAB University of Applied Sciences. Organized by Lahti FGC"
+                  title="Aftergaming at tournament"
                     class="img-cover">
                 </figure>
 
@@ -257,6 +273,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-09.jpg" width="450" height="600" loading="lazy"
+                  alt="More after gaming at Super Street Fighter 2 Turbo Lahti Fisticuffs Tournament in the LAB University of Applied Sciences. Organized by Lahti FGC"
+                  title="More aftergaming"
                     class="img-cover">
                 </figure>
               </div>
@@ -272,6 +290,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-10.jpg" width="450" height="600" loading="lazy"
+                  alt="More Super Street Fighter 2 Turbo Lahti Fisticuffs Tournament in the LAB University of Applied Sciences. Organized by Lahti FGC"
+                  title="SF2ST"
                     class="img-cover">
                 </figure>
 
@@ -284,6 +304,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-11.jpg" width="450" height="600" loading="lazy"
+                  alt="Even more after gaming at Super Street Fighter 2 Turbo Lahti Fisticuffs Tournament in the LAB University of Applied Sciences. Organized by Lahti FGC"
+                  title="Even more aftergaming"
                     class="img-cover">
                 </figure>
 
@@ -296,6 +318,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-12.jpg" width="450" height="600" loading="lazy"
+                  alt="Even more Super Street Fighter 2 Turbo Lahti Fisticuffs Tournament in the LAB University of Applied Sciences. Organized by Lahti FGC"
+                  title="More SF2ST Tournament"
                     class="img-cover">
                 </figure>
               </div>
@@ -318,6 +342,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-13.jpg" width="450" height="600" loading="lazy"
+                  alt="Start of Kaptam Winter LAN Party in the Lahti Science Park. Organized by Kaptam Gamers"
+                  title="Kaptam Winter LAN Party"
                     class="img-cover">
                 </figure>
 
@@ -330,6 +356,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-14.jpg" width="450" height="600" loading="lazy"
+                  alt="Middle of Kaptam Winter LAN Party in the Lahti Science Park. Organized by Kaptam Gamers"
+                  title="Back 4 Blood"
                     class="img-cover">
                 </figure>
 
@@ -342,6 +370,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-15.jpg" width="450" height="600" loading="lazy"
+                  alt="Peak of Kaptam Winter LAN Party in the Lahti Science Park. Organized by Kaptam Gamers"
+                  title="FIFA 24 & GTA 5"
                     class="img-cover">
                 </figure>
               </div>
@@ -364,6 +394,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-16.jpg" width="450" height="600" loading="lazy"
+                  alt="Mirror match in Tekken 3 Lahti Fisticuffs Tournament in the Lahti Science Park. Organized by Lahti FGC"
+                  title="Mirror match"
                     class="img-cover">
                 </figure>
 
@@ -376,6 +408,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-17.jpg" width="450" height="600" loading="lazy"
+                  alt="Fibes of Tekken 3 Lahti Fisticuffs Tournament in the Lahti Science Park. Organized by Lahti FGC"
+                  title="Tekken 3 Tournament"
                     class="img-cover">
                 </figure>
 
@@ -388,6 +422,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-18.jpg" width="450" height="600" loading="lazy"
+                  alt="People of Tekken 3 Lahti Fisticuffs Tournament in the Lahti Science Park. Organized by Lahti FGC"
+                  title="People vibing : 3"
                     class="img-cover">
                 </figure>
               </div>
@@ -403,6 +439,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-19.jpg" width="450" height="600" loading="lazy"
+                  alt="Venue of Tekken 3 Lahti Fisticuffs Tournament in the Lahti Science Park. Organized by Lahti FGC"
+                  title="One console tournament"
                     class="img-cover">
                 </figure>
 
@@ -415,6 +453,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-20.jpg" width="450" height="600" loading="lazy"
+                  alt="Impressions Tekken 3 Lahti Fisticuffs Tournament in the Lahti Science Park. Organized by Lahti FGC"
+                  title="''Interesting''"
                     class="img-cover">
                 </figure>
 
@@ -427,6 +467,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/events_images/small/gallery-21.jpg" width="450" height="600" loading="lazy"
+                  alt="Tension in Tekken 3 Lahti Fisticuffs Tournament in the Lahti Science Park. Organized by Lahti FGC"
+                  title="Unbeatable King"
                     class="img-cover">
                 </figure>
               </div>
@@ -472,6 +514,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-02.jpg" width="450" height="600" loading="lazy"
+                  alt="WRC 9 with a wheel in the Lahti Science Park, at Kaptam Gamers video games club"
+                  title="WRC 9"
                     class="img-cover">
                 </figure>
 
@@ -484,6 +528,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-03.jpg" width="450" height="600" loading="lazy"
+                  alt="Mouse and keyboard setup in the Lahti Science Park, at Kaptam Gamers video games club"
+                  title="Mouse & keyboard setup"
                     class="img-cover">
                 </figure>
               </div>
@@ -509,6 +555,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-05.jpg" width="450" height="600" loading="lazy"
+                  alt="FIFA 24 in the Lahti Science Park, at Kaptam Gamers video games club"
+                  title="FIFA 24"
                     class="img-cover">
                 </figure>
 
@@ -546,6 +594,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-08.jpg" width="450" height="600" loading="lazy"
+                  alt="2 matches of Tekken 7 in the Lahti Science Park, at Kaptam Gamers video games club"
+                  title="Tekken 7"
                     class="img-cover">
                 </figure>
 
@@ -558,6 +608,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-09.jpg" width="450" height="600" loading="lazy"
+                  alt="Street Fighter 3rd Strike and Tekken 7 in the Lahti Science Park, at Kaptam Gamers video games club"
+                  title="SF3 & Tekken 7"
                     class="img-cover">
                 </figure>
               </div>
@@ -597,6 +649,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-11.jpg" width="450" height="600" loading="lazy"
+                    alt="Students playing twenty-five in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
+                    title="Twenty-five"
                     class="img-cover">
                 </figure>
 
@@ -622,6 +676,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-13.jpg" width="450" height="600" loading="lazy"
+                  alt="Chess in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
+                  title="Chess"
                     class="img-cover">
                 </figure>
 
@@ -646,6 +702,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-15.jpg" width="450" height="600" loading="lazy"
+                    alt="Checkers in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
+                    title="Checkers"
                     class="img-cover">
                 </figure>
               </div>
@@ -659,6 +717,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-16.jpg" width="450" height="600" loading="lazy"
+                    alt="Kaptam Gamers ry's different board games, including Sushi Go!, Jenga, The Mind, Uno, Marvel Mayhem, For Sale"
+                    title="Various board games"
                     class="img-cover">
                 </figure>
 
@@ -671,6 +731,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-17.jpg" width="450" height="600" loading="lazy"
+                    alt="Students playing Uno and Othello in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
+                    title="Othello & Uno"
                     class="img-cover">
                 </figure>
 
@@ -683,6 +745,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gallery_images/small/gallery-18.jpg" width="450" height="600" loading="lazy"
+                    alt="Students playing Survivors of Hellapagos in the LAB University of Applied Sciences Lahti campus, at Kaptam Gamers board games club"
+                    title="Survivors of Hellapagos"
                     class="img-cover">
                 </figure>
               </div>
@@ -724,8 +788,8 @@
 
         <div class="footer-brand">
 
-          <p class="logo">Kaptam Gamers</p>
-
+          <p class="logo2">Kaptam Gamers</p>
+          <p class="footer-list-title" id="some"></p>
           <p class="footer-text">
             Association for Video Gamers, Board Gamers and Role-Players
           </p>
