--- a/en/home.html
+++ b/en/home.html
@@ -366,8 +366,8 @@
 
         <div class="footer-brand">
 
-          <p class="logo">Kaptam Gamers</p>
-
+          <p class="logo2">Kaptam Gamers</p>
+          <p class="footer-list-title" id="some"></p>
           <p class="footer-text">
             Association for Video Gamers, Board Gamers and Role-Players
           </p>
