--- a/en/videogames.html
+++ b/en/videogames.html
@@ -231,6 +231,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gaming_images/small/gallery-1.jpg" width="450" height="600" loading="lazy"
+                  alt="WRC 9 with a wheel in the Lahti Science Park, at Kaptam Gamers video games club"
+                  title="WRC 9"
                     class="img-cover">
                 </figure>
 
@@ -244,6 +246,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gaming_images/small/gallery-2.jpg" width="450" height="600" loading="lazy"
+                  alt="Students playing Boomerang Yu in the Lahti Science Park, at Kaptam Gamers video games club"
+                  title="Boomerang Yu"
                     class="img-cover">
                 </figure>
 
@@ -257,6 +261,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gaming_images/small/gallery-3.jpg" width="450" height="600" loading="lazy"
+                  alt="Street Fighter 3rd Strike and Tekken 7 in the Lahti Science Park, at Kaptam Gamers video games club"
+                  title="SF3 & Tekken 7"
                     class="img-cover">
                 </figure>
               </div>
@@ -270,6 +276,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gaming_images/small/gallery-4.jpg" width="450" height="600" loading="lazy"
+                  alt="2 matches of Tekken 7 in the Lahti Science Park, at Kaptam Gamers video games club"
+                  title="Tekken 7"
                     class="img-cover">
                 </figure>
 
@@ -282,6 +290,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gaming_images/small/gallery-5.jpg" width="450" height="600" loading="lazy"
+                  alt="Mouse and keyboard setup in the Lahti Science Park, at Kaptam Gamers video games club"
+                  title="Mouse & keyboard setup"
                     class="img-cover">
                 </figure>
 
@@ -294,6 +304,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gaming_images/small/gallery-6.jpg" width="450" height="600" loading="lazy"
+                  alt="FIFA 24 in the Lahti Science Park, at Kaptam Gamers video games club"
+                  title="FIFA 24"
                     class="img-cover">
                 </figure>
               </div>
@@ -327,8 +339,8 @@
 
         <div class="footer-brand">
 
-          <p class="logo">Kaptam Gamers</p>
-
+          <p class="logo2">Kaptam Gamers</p>
+          <p class="footer-list-title" id="some"></p>
           <p class="footer-text">
             Association for Video Gamers, Board Gamers and Role-Players
           </p>
