--- a/fi/index.html
+++ b/fi/index.html
@@ -58,11 +58,11 @@
           <ul class="navbar-list">
 
 			<li class="navbar-item">
-            <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Videopelikerho</a>
-            </li>
-
-			<li class="navbar-item">
             <a href="lautapeli.html" class="navbar-link skewBg" data-nav-link>Lautapelikerho</a>
+            </li>
+            
+			<li class="navbar-item">
+            <a href="videopeli.html" class="navbar-link skewBg" data-nav-link>Videopelikerho</a>
             </li>
 
 			<li class="navbar-item">
@@ -369,8 +369,8 @@
 
         <div class="footer-brand">
 
-          <p class="logo">Kaptam Gamers</p>
-          <p class="footer-list-title" id="some" style="margin-top:-30px;"></p>
+          <p class="logo2">Kaptam Gamers</p>
+          <p class="footer-list-title" id="some"></p>
           <p class="footer-text">
             Videopelaajien, lautapelaajien ja roolipelaajien yhdistys
           </p>
