--- a/fi/info.html
+++ b/fi/info.html
@@ -247,8 +247,8 @@
 
         <div class="footer-brand">
 
-          <p class="logo">Kaptam Gamers</p>
-
+          <p class="logo2">Kaptam Gamers</p>
+          <p class="footer-list-title" id="some"></p>
           <p class="footer-text">
             Videopelaajien, lautapelaajien ja roolipelaajien yhdistys
           </p>
