--- a/fi/lautapeli.html
+++ b/fi/lautapeli.html
@@ -241,6 +241,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/boardgames_images/small/gallery-1.jpg" width="450" height="600" loading="lazy"
+                    alt="Shakkia LAB-ammattikorkeakoulun Lahden kampuksella, Kaptam Gamers lautapelikerhossa"
+                    title="Shakki"
                     class="img-cover">
                 </figure>
 
@@ -254,6 +256,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/boardgames_images/small/gallery-2.jpg" width="450" height="600" loading="lazy"
+                    alt="Tammea LAB-ammattikorkeakoulun Lahden kampuksella, Kaptam Gamers lautapelikerhossa"
+                    title="Tammi"
                     class="img-cover">
                 </figure>
 
@@ -267,6 +271,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/boardgames_images/small/gallery-3.jpg" width="450" height="600" loading="lazy"
+                    alt="Opiskelijat pelaavat Survivors of Hellapagos lautapeliä LAB-ammattikorkeakoulun Lahden kampuksella Kaptam Gamers lautapelikerhossa"
+                    title="Survivors of Hellapagos"
                     class="img-cover">
                 </figure>
               </div>
@@ -280,6 +286,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/boardgames_images/small/gallery-4.jpg" width="450" height="600" loading="lazy"
+                    alt="Opiskelijat pelaavat Othello:a ja Uno:a lautapelijä LAB-ammattikorkeakoulun Lahden kampuksella Kaptam Gamers lautapelikerhossa"
+                    title="Othello & Uno"
                     class="img-cover">
                 </figure>
 
@@ -292,6 +300,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/boardgames_images/small/gallery-5.jpg" width="450" height="600" loading="lazy"
+                    alt="Kaptam Gamers ry:n erilaisia lautapelejä, kuten Sushi Go!, Jenga, The Mind, Uno, Marvel Mayhem, For Sale"
+                    title="Erillaisia lautapelejä"
                     class="img-cover">
                 </figure>
 
@@ -304,6 +314,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/boardgames_images/small/gallery-6.jpg" width="450" height="600" loading="lazy"
+                    alt="Opiskelijat pelaavat korttipeliä nimeltä 25 LAB-ammattikorkeakoulun Lahden kampuksella Kaptam Gamers lautapelikerhossa"
+                    title="25 korttipeli"
                     class="img-cover">
                 </figure>
               </div>
@@ -338,8 +350,8 @@
 
         <div class="footer-brand">
           
-          <p class="logo">Kaptam Gamers</p>
-          <p class="footer-list-title" id="some" style="margin-top:-30px;"></p>
+          <p class="logo2">Kaptam Gamers</p>
+          <p class="footer-list-title" id="some"></p>
           <p class="footer-text">
              Videopelaajien, lautapelaajien ja roolipelaajien yhdistys
           </p>
