--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -234,8 +234,8 @@
 
         <div class="footer-brand">
           
-          <p class="logo">Kaptam Gamers</p>
-          <p class="footer-list-title" id="some" style="margin-top:-30px;"></p>
+          <p class="logo2">Kaptam Gamers</p>
+          <p class="footer-list-title" id="some"></p>
           <p class="footer-text">
              Videopelaajien, lautapelaajien ja roolipelaajien yhdistys
           </p>
