--- a/fi/videopeli.html
+++ b/fi/videopeli.html
@@ -238,6 +238,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gaming_images/small/gallery-1.jpg" width="450" height="600" loading="lazy"
+                   alt="WRC 9 ratilla Lahden tiedepuistossa, Kaptam Gamers videopeliklubilla"
+                    title="WRC 9"
                     class="img-cover">
                 </figure>
 
@@ -251,6 +253,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gaming_images/small/gallery-2.jpg" width="450" height="600" loading="lazy"
+                  alt="Opiskelijat pelaavat Boomerang Yu Lahden tiedepuistossa, Kaptam Gamers videopeliklubilla"
+                  title="Boomerang Yu"
                     class="img-cover">
                 </figure>
 
@@ -264,6 +268,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gaming_images/small/gallery-3.jpg" width="450" height="600" loading="lazy"
+                  alt="Street Fighter 3rd Strike ja Tekken 7 Lahden tiedepuistossa, Kaptam Gamers videopeliklubilla"
+                  title="SF3 & Tekken 7"
                     class="img-cover">
                 </figure>
               </div>
@@ -277,6 +283,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gaming_images/small/gallery-4.jpg" width="450" height="600" loading="lazy"
+                  alt="2 matsia Tekken 7 Lahden tiedepuistossa, Kaptam Gamers videopeliklubilla"
+                  title="Tekken 7"
                     class="img-cover">
                 </figure>
 
@@ -289,6 +297,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gaming_images/small/gallery-5.jpg" width="450" height="600" loading="lazy"
+                  alt="Näppäimistö ja hiiri setup Lahden tiedepuistossa, Kaptam Gamers videopeliklubilla"
+                  title="Näppäimistö ja hiiri setup"
                     class="img-cover">
                 </figure>
 
@@ -301,6 +311,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/gaming_images/small/gallery-6.jpg" width="450" height="600" loading="lazy"
+                  alt="FIFA 24 Lahden tiedepuistossa, Kaptam Gamers videopeliklubilla"
+                  title="FIFA 24"
                     class="img-cover">
                 </figure>
               </div>
@@ -333,8 +345,8 @@
       <div class="container">
         <div class="footer-brand">
 
-          <p class="logo">Kaptam Gamers</p>
-          <p class="footer-list-title" id="some" style="margin-top:-30px;"></p>
+          <p class="logo2">Kaptam Gamers</p>
+          <p class="footer-list-title" id="some"></p>
           <p class="footer-text">
             Videopelaajien, lautapelaajien ja roolipelaajien yhdistys
           </p>
