--- a/en/about.html
+++ b/en/about.html
@@ -193,7 +193,7 @@
 			</span>
 			</p>
                   <h1 class="h1 hero-title">
-             <a href="https://link.webropolsurveys.com/S/D3B578F931BE4CF6" target="_blank"> <button class="btn skewBg" style="font-size:17px;">
+             <a href="https://link.webropolsurveys.com/S/0AC104657C35B9F7" target="_blank"> <button class="btn skewBg" style="font-size:17px;">
               Fill out this form <br> if you are interested
             </button></a>
 	     
@@ -230,8 +230,8 @@
 
         <div class="footer-brand">
 
-          <p class="logo">Kaptam Gamers</p>
-
+          <p class="logo2">Kaptam Gamers</p>
+          <p class="footer-list-title" id="some"></p>
           <p class="footer-text">
             Association for Video Gamers, Board Gamers and Role-Players
           </p>
