--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -483,8 +483,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/lahti_fgc_images/small/gallery-01.jpg" width="450" height="600" loading="lazy"
-                  alt="BlazBlue Centralfiction in Lahti FGC weekly at the Puolenkuun Pelit"
-                  title="BlazBlue Centralfiction"
+                  alt="Sunday session in Lahti FGC weekly at the Puolenkuun Pelit"
+                  title="Fighting game corner"
                     class="img-cover">
                 </figure>
 
@@ -498,8 +498,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/lahti_fgc_images/small/gallery-02.jpg" width="450" height="600" loading="lazy"
-                  alt="The King Of Fighters 2002 UM in Lahti FGC weekly at the Puolenkuun Pelit"
-                  title="KOF 02 UM"
+                  alt="Street Fighter 6 K.O in Lahti FGC weekly at the Puolenkuun Pelit"
+                  title="SF6"
                     class="img-cover">
                 </figure>
 
@@ -513,8 +513,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/lahti_fgc_images/small/gallery-03.jpg" width="450" height="600" loading="lazy"
-                  alt="More BlazBlue Centralfiction in Lahti FGC weekly at the Puolenkuun Pelit"
-                  title="BlazBlue Centralfiction"
+                  alt="General vibe of Lahti FGC weekly at the Puolenkuun Pelit"
+                  title="Cookin"
                     class="img-cover">
                 </figure>
               </div>
@@ -557,7 +557,7 @@
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/lahti_fgc_images/small/gallery-06.jpg" width="450" height="600" loading="lazy"
                   alt="Tekken 3 Lahti Fisticuffs Tournament in the Lahti Science park. Organized by Lahti FGC"
-                  title="Tekken 3"
+                  title="Tekken 3 Tournament"
                     class="img-cover">
                 </figure>
               </div>
