--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -516,8 +516,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/lahti_fgc_images/small/gallery-01.jpg" width="450" height="600" loading="lazy"
-                  alt="BlazBlue Centralfiction Lahti FGC weekleissä Puolenkuun Pelit kaupan yhteisessä pelitilassa"
-                  title="BlazBlue Centralfiction"
+                  alt="Sunnuntain sessio Lahti FGC weekleissä Puolenkuun Pelit kaupan yhteisessä pelitilassa"
+                  title="Taistelupelinurkka"
                     class="img-cover">
                 </figure>
 
@@ -531,8 +531,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/lahti_fgc_images/small/gallery-02.jpg" width="450" height="600" loading="lazy"
-                  alt="The King Of Fighters 2002 UM Lahti FGC weekleissä Puolenkuun Pelit kaupan yhteisessä pelitilassa"
-                  title="KOF 02 UM"
+                  alt="Street Fighter 6 voitto (K.O) Lahti FGC weekleissä Puolenkuun Pelit kaupan yhteisessä pelitilassa"
+                  title="SF6"
                     class="img-cover">
                 </figure>
 
@@ -546,8 +546,8 @@
 
                 <figure class="card-banner img-holder" style="--width: 400; --height: 300;">
                   <img src="../assets/images/lahti_fgc_images/small/gallery-03.jpg" width="450" height="600" loading="lazy"
-                  alt="Lisää BlazBlue Centralfiction Lahti FGC weekleissä Puolenkuun Pelit kaupan yhteisessä pelitilassa"
-                  title="BlazBlue Centralfiction"
+                  alt="Yleis viilis Lahti FGC weekleissä Puolenkuun Pelit kaupan yhteisessä pelitilassa"
+                  title="Bros cookin"
                     class="img-cover">
                 </figure>
               </div>
